change index.html and add a new format some png-images

--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
 						</div>
 					</div>
 					<div class="col-lg-6 col-md-5 order-lg-2 order-1 wow fadeInRight" data-wow-duration="1s">
-						<img src="./img/favicon/header-img.png" alt="compuer scince" class="animate_graph">
+						<picture class="img-responsive">
+							<source srcset="./img/favicon/header-img.webp" type="image/webp">
+							<img src="./img/favicon/header-img.png" alt="compuer scince" class="animate_graph">
+						</picture>
 					</div>
 
 				</div>
@@ -162,7 +165,10 @@
 		<div class="container">
 			<div class="row d-flex align-items-center">
 				<div class="col-lg-6 col-md-4 info__1 wow fadeInLeft" data-wow-duration="1.5s">
-					<img src="./img/favicon/Logos.png" alt="logos" class="img-responsive">
+					<picture class="img-responsive">
+						<source srcset="./img/favicon/Logos.webp" type="image/webp">
+						<img src="./img/favicon/Logos.png" alt="logos">
+					</picture>
 				</div>
 				<div class="col-lg-6 col-md-8">
 					<div class="launch__stack wow fadeInRight" data-wow-duration="1.5s">
@@ -195,7 +201,11 @@
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-4 info__1 wow fadeInRight" data-wow-duration="1.5s">
-					<img src="./img/favicon/info-2_cut-photo.ru.png" alt="logos" class="img-responsive">
+					<picture class="img-responsive">
+						<source srcset="./img/favicon/info-2_cut-photo.ru.webp" type="image/webp">
+						<img src="./img/favicon/info-2_cut-photo.ru.png" alt="logos">
+					</picture>
+					
 				</div>
 			</div>
 		</div>
