--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="UTF-8">
 
-	<title>Start Html template - htmllessons.ru</title>
+	<title>Quibly</title>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
